@@ -129,7 +129,7 @@ See \code{polr} for details.
 }
 
 \author{Andrew Gelman \email{gelman@stat.columbia.edu};
-        Yu-Sung Su \email{ys463@columbia.edu};
+        Yu-Sung Su \email{suyusung@tsinghua.edu.cn};
         Maria Grazia Pittau \email{grazia@stat.columbia.edu}
 }
 \seealso{\code{\link{bayesglm}},
