@@ -58,7 +58,7 @@ sim(object, ...)
             Cambridge University Press.}
 
 \author{Andrew Gelman \email{gelman@stat.columbia.edu};
-        Yu-Sung Su \email{ys463@columbia.edu};
+        Yu-Sung Su \email{suyusung@tsinghua.edu.cn};
         Vincent Dorie \email{vincent@stat.columbia.edu}
 }
 
